add multiple css porprty in single line

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>JavaScript Outputs</title>
 </head>
 <body>
+    <p id="date"></p>
     <script src="/start.js"></script>
 </body>
 </html>
