--- a/Js-outputs/index.html
+++ b/Js-outputs/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p id="date"></p>
-    <script src="/start.js"></script>
+    <script src="/Js-outputs/start.js"></script>
 </body>
 </html>
